--- a/index.html
+++ b/index.html
@@ -1,48 +1,36 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Emlaw Aeronautics - Oklahoma City Drone Company</title>
-    <style>
-        body{
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-        }
-        .header{
-            background-color: #333;
-            color: #ffffff;
-            padding: 10px;
-            text-align: center;
-        }
-        .content{
-            margin: 20px;
-            text-align: center;
-        }
-        .content img{
-            width: 300px;
-            height: auto;
-        }
-        .contact{
-            margin-top: 50px;
-        }
-        .contact p{
-            font-size: 20px;
-            font-weight: 600;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Emlaw Aeronautics</h1>
-        <p>Top Rated Drone Company in Oklahoma City</p>
+    <div class="banner" >
+        <div class="logo"> 
+            <img src="logo.png" />
+        </div>
+        <div class="header">
+            <h1>Emlaw Aeronautics</h1>
+        </div>
+    </div>
+    <div class="sample">
+        <h2>Certified Drone Pilot in Oklahoma City</h2>
     </div>
     <div class="content">
-        <p>Meet Our Founder</p>
-        <img src="your-image-url.jpg" alt="Founder with drone">
-        <div class="contact">
-            <p>Email: <a href="mailto:emlawaeronautics@gmail.com">emlawaeronautics@gmail.com</a></p>
-            <p>Phone: 123-456-7890</p>
+        <img src="profile.jpg" alt="Photograph of Zachary">
+        <div class="content-text">
+            <p>Hi, I'm Zachary. I'm a certified part 107 drone pilot and the founder of Emlaw Aeronautics! 
+                I love helping others and am exctied about getting to serve my community with my passion of aeronautics.
+            </p>
+            <p>If you're looking for done video or photography in the Oklahoma City metro or surrouding areas, 
+                don't hesitate to reach out! I'd be happy to provide samples of my work.
+                 I also offer a money back guarantee!
+            </p>
+            <p>Contact us at <a href="mailto:emlawaeronautics@gmail.com">emlawaeronautics@gmail.com</a></p>    
         </div>
+
+    </div>
+    <div class="contact">
     </div>
 </body>
 </html>
