--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Emlaw Aeronautics - Oklahoma City Drone Company</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
     <div class="banner" >
