new photo on page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Certified Drone Pilot in Oklahoma City</h2>
     </div>
     <div class="content">
-        <img src="profile.jpg" alt="Photograph of Zachary">
+        <img src="flying_a_drone.jpg" alt="Photograph of Zachary">
         <div class="content-text">
             <p>Hi, I'm Zachary. I'm a certified part 107 drone pilot and the founder of Emlaw Aeronautics! 
                 I love helping others and am exctied about getting to serve my community with my passion of aeronautics.
